@@ -1,4 +1,6 @@
 0.02
+ [Log::FreeSWITCH::Line::Data]
+ - Add missing VERSION.
 
 0.01 2015-01-04T11:16:34+01:00
  - First version.
